# DONZO

./: .env.example  .gitignore  AGENTS.md  AGENTS.override.md  CHANGELOG.md  DONZO_CHECKLIST.json  DONZO_PROGRESS.md  DONZO_RESUME_PROMPT.md  DONZO_ROADMAP.md  README.md  codex정리.md  package.json  pipeline.md  pyproject.toml  scope.example.yaml  개발 계획서.md
.codex/: config.toml  hooks.json
.codex/agents/: artifact_parser.toml  docs_researcher.toml  finding_validator.toml  patch_worker.toml  recon_planner.toml  report_writer.toml  scope_guard.toml  security_reviewer.toml
.codex/hooks/: _policy_common.py  permission_request.py  post_tool_use_review.py  pre_tool_use_policy.py  stop_summary.py  user_prompt_guard.py
.codex/rules/: default.rules  git.rules  package-manager.rules  recon.rules
.github/workflows/: donzo-ci.yml
config/: actors.yaml  scope.yaml
docs/: codex-donzo-new-target-runbook.md
harness/: README.md  __init__.py  scope.example.yaml
harness/ci/: codex-autofix-on-ci-failure.yml  codex-harness-check.yml  codex-review.yml
harness/evals/: rubric.yaml
harness/policy/: allowed-actions.yaml  forbidden-actions.yaml  safety-policy.md  tool-matrix.yaml
harness/prompts/: cluster-triage.md  finding-triage.md  (+3 more)
scripts/: compare-readonly-cross-actor.py  donzo-wsl.sh  install-donzo-tools-wsl.sh  install-donzo-tools.ps1
tests/: test_donzo_plan_cli.py  test_donzo_scope_policy.py  test_fuzzing_oracles.py  test_harness_scripts.py  test_llm_triage.py  test_mvp_pipeline.py  test_redteam_execution.py  test_refinement_models.py  test_roadmap_completion.py
(+179 files in other folders)
