[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "donzo"
version = "0.3.0"
description = "Authorized-only black-box bug bounty automation harness."
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.22",
  "pyyaml>=6.0",
]

[project.scripts]
donzo = "donzo.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["donzo*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []
